--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>AULA GRATIS FAÇA SUA PRIMEIRA VENDA</h1>
         <h3>(Conteudo exclusivo para membros)</h3>
         <div class="video">
-            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/GSKRkCK7GIs?si=vMTEgcxW_D2MeHSD&amp;autoplay=1;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/GSKRkCK7GIs?si=vMTEgcxW_D2MeHSD&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </main>
     <footer>
